--- a/src/index.scss
+++ b/src/index.scss
@@ -1,63 +1,12 @@
-@font-face {
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Lato Regular'), local('Lato-Regular'), url('https://cdn01.boxcdn.net/fonts/1.0.2/lato/Lato-Regular.woff2') format('woff2'), url('https://cdn01.boxcdn.net/fonts/1.0.2/lato/Lato-Regular.woff') format('woff');
-}
-
-@font-face {
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: bold;
-    src: local('Lato Bold'), local('Lato-Bold'), url('https://cdn01.boxcdn.net/fonts/1.0.2/lato/Lato-Bold.woff2') format('woff2'), url('https://cdn01.boxcdn.net/fonts/1.0.2/lato/Lato-Bold.woff') format('woff');
-}
-
-.buik {
-    background: #fff;
-    border: 0 none;
-    /* stylelint-disable declaration-no-important */
-    box-sizing: border-box !important;
-    /* stylelint-enable declaration-no-important */
-    color: #222;
-    font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;;
-    font-size: 13px;
+body, html {
     height: 100%;
-    letter-spacing: .13px;
-    margin: 0;
-    outline: none;
-    overflow: hidden;
+    width: 100%;
     padding: 0;
-    position: relative;
-    text-rendering: optimizeLegibility;
-    user-select: none;
-    width: 100%;
-
-    * {
-        /* stylelint-disable declaration-no-important */
-        box-sizing: border-box !important;
-        /* stylelint-enable declaration-no-important */
-        font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-
-        &::after,
-        &::before {
-            box-sizing: inherit;
-            color: inherit;
-            font-family: inherit;
-            text-rendering: inherit;
-        }
-    }
-}
-
-.buik-app-element {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
+    border: 0 none;
+    margin: 0;
 }
 
 .container {
-    height: 800px;
-    width: 800px;
+    height: 100%;
+    width: 100%;
 }
